
  * Issue #33:  the `beginning-of-defun` and `end-of-defun` commands now invoke js2-mode equivalents, resulting in hopefully more reasonable behavior.

  * added a new command key, `C-c C-o`, for showing/hiding the current comment or function

  * Issue #48:  command to toggle syntax error reporting:  added menu option and new command-key, 'C-c C-w', to toggle the display of warnings and errors

Bug fixes:

  * fixed a whole class of problems created by regexp literals containing quotes, brackets, braces and parens
  * fixed unreported bug where warning/error faces weren't overriding normal fontification face in some cases
  * Issue #8:  bug in parsing an unescaped '/' in a regexp character class
  * Issue #17:  /**/foo/**/ being parsed as a single block comment
  * Issue #24:  mode doesn't highlight anything for certain malformed input
  * Issue #25:  inserting escaped quote ignores existing escape char at point
  * Issue #26:  can't insert escaped quote just before end of terminated string
  * Issue #27:  Improper flagging of inconsistent return usage
  * Issue #29:  spurious no-side-effects warning on the "debugger" keyword
  * Issue #34:  Unexpected behavior with js2-mode-find-tag
  * Issue #35:  need to define a local js2-mode-abbrev-table
  * Issue #37:  typing # will crash Emacs
  * Issue #38:  chokes on non-ASCII characters in identifiers
  * Issue #40:  warning on byte-compile
  * Issue #42:  hide-comments should hide //-comments
  * Issue #47:  namespace cleanliness nit

Behavior changes:

  * changed close-curly to use the magic-close-paren function, so that typing C-u {} does the right thing.